refactor frontend mainview & add backend get logic